--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -2,8 +2,7 @@ name: Readme
 
 on:
   schedule:
-    # Runs at 12am IST
-    - cron: '30 18 * * *'
+    - cron: "30 18 * * *"
   workflow_dispatch:
 jobs:
   update-readme:
@@ -14,7 +13,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-		  SHOW_LANGUAGE: "False"
-		  SHOW_LANGUAGE_PER_REPO: "False"
-		  SHOW_PROJECTS: "False"
-		  LOCALE: "en"
+          SHOW_LANGUAGE: "False"
+          SHOW_LANGUAGE_PER_REPO: "False"
+          SHOW_PROJECTS: "False"
+          LOCALE: "en"
