--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -35,7 +35,7 @@ jobs:
       - name: push github-contribution-grid-snake.svg to the master branch
         uses: crazy-max/ghaction-github-pages@v2.6.0
         with:
-          target_branch: master
+          target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
